--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
     
     - uses: actions/checkout@v3
+      with:
+        repository: ${{ github.repository }}
+        path: ./fe-dumbmerch
     
     - name: docker shit
       uses: ./
