--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: docker shit
-      uses: ./
+      uses: appleboy/ssh-action@v1.0.0
       with:
         host: 103.175.219.128
         username: aimingds
